[package]
name = "hypr-left-ws"
version = "0.1.0"
description = "Small tool for simulating leftWM workspace behaviour in hyprland"
keywords = ["hyprland", "leftwm", "workspaces"]
edition = "2021"
authors = ["Gunnar Raßmann"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/GrumiumXD/hypr-left-ws"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyprland = "0.3.12"
